// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generalWhereCondition should map a Principal Investigator to a contains condition 1`] = `
Object {
  "AND": Array [
    Object {
      "CONTAINS": Object {
        "column": "Proposal.principalInvestigatorFamilyName",
        "value": "Doe",
      },
    },
  ],
}
`;

exports[`generalWhereCondition should map a proposal code to a contains condition 1`] = `
Object {
  "AND": Array [
    Object {
      "CONTAINS": Object {
        "column": "Proposal.proposalCode",
        "value": "2-SCI",
      },
    },
  ],
}
`;

exports[`generalWhereCondition should map an observation night to a greater equal and less equal condition spanning one night 1`] = `
Object {
  "AND": Array [
    Object {
      "EQUALS": Object {
        "column": "Observation.night",
        "value": "2019-02-17",
      },
    },
  ],
}
`;

exports[`generalWhereCondition should map input data correctly 1`] = `
Object {
  "AND": Array [
    Object {
      "EQUALS": Object {
        "column": "Observation.night",
        "value": "2019-05-13",
      },
    },
    Object {
      "CONTAINS": Object {
        "column": "Proposal.principalInvestigatorFamilyName",
        "value": "Sipho",
      },
    },
    Object {
      "CONTAINS": Object {
        "column": "Proposal.proposalCode",
        "value": "2019-1-SCI-042",
      },
    },
  ],
}
`;

exports[`targetWhereCondition should map a single position to a within condition 1`] = `
Object {
  "AND": Array [
    Object {
      "WITHIN_RADIUS": Object {
        "declination": -5,
        "declinationColumn": "Target.declination",
        "radius": 0.04,
        "rightAscension": 17,
        "rightAscensionColumn": "Target.rightAscension",
      },
    },
  ],
}
`;

exports[`targetWhereCondition should map declination ranges to less than and greater than conditions 1`] = `
Object {
  "AND": Array [
    Object {
      "GREATER_EQUAL": Object {
        "column": "Target.declination",
        "value": -0.55,
      },
    },
    Object {
      "LESS_EQUAL": Object {
        "column": "Target.declination",
        "value": -0.45,
      },
    },
  ],
}
`;

exports[`targetWhereCondition should map declination ranges to less than and greater than conditions 2`] = `
Object {
  "AND": Array [
    Object {
      "GREATER_EQUAL": Object {
        "column": "Target.rightAscension",
        "value": 5,
      },
    },
    Object {
      "LESS_EQUAL": Object {
        "column": "Target.rightAscension",
        "value": 9,
      },
    },
    Object {
      "GREATER_EQUAL": Object {
        "column": "Target.declination",
        "value": -0.55,
      },
    },
    Object {
      "LESS_EQUAL": Object {
        "column": "Target.declination",
        "value": -0.45,
      },
    },
  ],
}
`;

exports[`targetWhereCondition should map declination ranges to less than and greater than conditions 3`] = `
Object {
  "AND": Array [
    Object {
      "GREATER_EQUAL": Object {
        "column": "Target.declination",
        "value": -10,
      },
    },
    Object {
      "LESS_EQUAL": Object {
        "column": "Target.declination",
        "value": 12,
      },
    },
  ],
}
`;

exports[`targetWhereCondition should map declination ranges to less than and greater than conditions 4`] = `
Object {
  "AND": Array [
    Object {
      "GREATER_EQUAL": Object {
        "column": "Target.declination",
        "value": -10,
      },
    },
    Object {
      "LESS_EQUAL": Object {
        "column": "Target.declination",
        "value": 12,
      },
    },
  ],
}
`;

exports[`targetWhereCondition should map declination ranges to less than and greater than conditions 5`] = `
Object {
  "AND": Array [
    Object {
      "GREATER_EQUAL": Object {
        "column": "Target.rightAscension",
        "value": 115,
      },
    },
    Object {
      "LESS_EQUAL": Object {
        "column": "Target.rightAscension",
        "value": 200,
      },
    },
    Object {
      "GREATER_EQUAL": Object {
        "column": "Target.declination",
        "value": 10,
      },
    },
    Object {
      "LESS_EQUAL": Object {
        "column": "Target.declination",
        "value": 12,
      },
    },
  ],
}
`;

exports[`targetWhereCondition should map right ascension ranges to less than and greater than conditions 1`] = `
Object {
  "AND": Array [
    Object {
      "GREATER_EQUAL": Object {
        "column": "Target.rightAscension",
        "value": 12.95,
      },
    },
    Object {
      "LESS_EQUAL": Object {
        "column": "Target.rightAscension",
        "value": 13.05,
      },
    },
  ],
}
`;

exports[`targetWhereCondition should map right ascension ranges to less than and greater than conditions 2`] = `
Object {
  "AND": Array [
    Object {
      "GREATER_EQUAL": Object {
        "column": "Target.rightAscension",
        "value": 12.95,
      },
    },
    Object {
      "LESS_EQUAL": Object {
        "column": "Target.rightAscension",
        "value": 13.05,
      },
    },
    Object {
      "GREATER_EQUAL": Object {
        "column": "Target.declination",
        "value": 12,
      },
    },
    Object {
      "LESS_EQUAL": Object {
        "column": "Target.declination",
        "value": 13,
      },
    },
  ],
}
`;

exports[`targetWhereCondition should map right ascension ranges to less than and greater than conditions 3`] = `
Object {
  "AND": Array [
    Object {
      "GREATER_EQUAL": Object {
        "column": "Target.rightAscension",
        "value": 4,
      },
    },
    Object {
      "LESS_EQUAL": Object {
        "column": "Target.rightAscension",
        "value": 355,
      },
    },
  ],
}
`;

exports[`targetWhereCondition should map right ascension ranges to less than and greater than conditions 4`] = `
Object {
  "AND": Array [
    Object {
      "OR": Array [
        Object {
          "AND": Array [
            Object {
              "GREATER_EQUAL": Object {
                "column": "Target.rightAscension",
                "value": 355,
              },
            },
            Object {
              "LESS_EQUAL": Object {
                "column": "Target.rightAscension",
                "value": 360,
              },
            },
          ],
        },
        Object {
          "AND": Array [
            Object {
              "GREATER_EQUAL": Object {
                "column": "Target.rightAscension",
                "value": 0,
              },
            },
            Object {
              "LESS_EQUAL": Object {
                "column": "Target.rightAscension",
                "value": 4,
              },
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`targetWhereCondition should map right ascension ranges to less than and greater than conditions 5`] = `
Object {
  "AND": Array [
    Object {
      "GREATER_EQUAL": Object {
        "column": "Target.rightAscension",
        "value": 4,
      },
    },
    Object {
      "LESS_EQUAL": Object {
        "column": "Target.rightAscension",
        "value": 355,
      },
    },
    Object {
      "GREATER_EQUAL": Object {
        "column": "Target.declination",
        "value": -11,
      },
    },
    Object {
      "LESS_EQUAL": Object {
        "column": "Target.declination",
        "value": -12,
      },
    },
  ],
}
`;
